infra/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clustershift-benchmark-deployment
  namespace: benchmark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clustershift-benchmark-deployment
  template:
    metadata:
      labels:
        app: clustershift-benchmark-deployment
    spec:
      serviceAccountName: clustershift-benchmark
      containers:
        - name: clustershift-benchmark-deployment
          image: ghcr.io/romankudravcev/clustershift-benchmark-application:latest
          ports:
            - containerPort: 1337
---
apiVersion: v1
kind: Service
metadata:
  name: clustershift-benchmark-service
  namespace: benchmark
spec:
  selector:
    app: clustershift-benchmark-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1337
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: clustershift-benchmark-ingress-route
  namespace: benchmark
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: clustershift-benchmark-service
          port: 80
